--- a/page2.html
+++ b/page2.html
@@ -51,6 +51,8 @@ and open the template in the editor.
                 <a href="index.html">Main Page</a>
                 <a href="page3.html">About the Collage</a>
             </footer>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Z2jIPqAM84g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        
         </div>
     </body>
 </html>
